--- a/index.html
+++ b/index.html
@@ -6,53 +6,35 @@
 <body>
 
     <script>
-    var config = {
-        type: Phaser.AUTO,
-        width: 800,
-        height: 600,
-        physics: {
-            default: 'arcade',
-            arcade: {
-                gravity: { y: 200 }
-            }
-        },
-        scene: {
-            preload: preload,
-            create: create
-        }
-    };
+    const config = {
+  width: 500,
+  height: 500,
+  backgroundColor: 0xdda0dd,
+  scene: {
+    preload,
+    create,
+    update
+  }
+};
 
-    var game = new Phaser.Game(config);
+const game = new Phaser.Game(config);
 
-    function preload ()
-    {
-        this.load.setBaseURL('http://labs.phaser.io');
+let gameState = {}
 
-        this.load.image('sky', 'assets/skies/space3.png');
-        this.load.image('logo', 'assets/sprites/phaser3-logo.png');
-        this.load.image('red', 'assets/particles/red.png');
-    }
+function preload(){
+  this.load.image('player', 'https://i.ibb.co/hXhzDGK/busterifhewasacircle.png')
+}
 
-    function create ()
-    {
-        this.add.image(400, 300, 'sky');
+function create(){
+  gameState.player = this.add.sprite(100, 100, 'player')
+  gameState.cursors = this.input.keyboard.createCursorKeys()
+}
 
-        var particles = this.add.particles('red');
-
-        var emitter = particles.createEmitter({
-            speed: 100,
-            scale: { start: 1, end: 0 },
-            blendMode: 'ADD'
-        });
-
-        var logo = this.physics.add.image(400, 100, 'logo');
-
-        logo.setVelocity(100, 200);
-        logo.setBounce(1, 1);
-        logo.setCollideWorldBounds(true);
-
-        emitter.startFollow(logo);
-    }
+function update(){
+  if(gameState.cursors.down.isDown){
+    gameState.player.y += 1
+  }
+}
     </script>
 
 </body>
