--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ function update(){
     gameState.player.x += 5
   }
   if(gameState.cursors.left.isDown){
-    gameState.player.y -= 5
+    gameState.player.x -= 5
   }
 }
     </script>
