--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     const config = {
      width: 500,
      height: 500,
-     backgroundColor: 0xdda0dd,
+     backgroundColor: f2efe1,
      scene: {
       preload,
       create,
