--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     const config = {
      width: 500,
      height: 500,
-     backgroundColor: f2efe1,
+     backgroundColor: rgb(255, 0, 0),
      scene: {
       preload,
       create,
