--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     const config = {
      width: 500,
      height: 500,
-     backgroundColor: FF0000,
+     backgroundColor: 'rgb(68, 136, 170)',
      scene: {
       preload,
       create,
