--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 
     <script>
     const config = {
-     width: 500,
-     height: 500,
+     width: window.innerWidth,
+     height: window.innerHeight,
      backgroundColor: 'rgb(68, 136, 170)',
      scene: {
       preload,
