--- a/index.html
+++ b/index.html
@@ -7,14 +7,17 @@
 
     <script>
     const config = {
-     width: window.innerWidth,
-     height: window.innerHeight,
+     width: 500,
+     height: 500,
      backgroundColor: 'rgb(68, 136, 170)',
      scene: {
       preload,
       create,
       update
-  }
+     }
+     scale: {
+      mode: 'stretch'
+     }
 };
 
 const game = new Phaser.Game(config);
