--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>2D Movement</title>
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/hXhzDGK/busterifhewasacircle.png">
     <style>
      html, body {
       margin: 0;
