--- a/index.html
+++ b/index.html
@@ -14,45 +14,54 @@
 <body>
 
     <script>
-    function preload() {
-  this.load.image('platform', 'https://content.codecademy.com/courses/learn-phaser/physics/platform.png');
-  this.load.image('codey', 'https://content.codecademy.com/courses/learn-phaser/physics/codey.png');
+	    function preload() {
+  this.load.image(
+    "bug1",
+    "https://content.codecademy.com/courses/learn-phaser/physics/bug_1.png"
+  );
+  this.load.image(
+    "bug2",
+    "https://content.codecademy.com/courses/learn-phaser/physics/bug_2.png"
+  );
+  this.load.image(
+    "bug3",
+    "https://content.codecademy.com/courses/learn-phaser/physics/bug_3.png"
+  );
+  this.load.image(
+    "platform",
+    "https://content.codecademy.com/courses/learn-phaser/physics/platform.png"
+  );
+  this.load.image(
+    "codey",
+    "https://content.codecademy.com/courses/learn-phaser/physics/codey.png"
+  );
 }
 
-const gameState = {
-  score: 0
-};
+const gameState = {};
 
 function create() {
-  gameState.player = this.physics.add.sprite(225, 450, 'codey').setScale(.5);
-  
+  gameState.player = this.physics.add.sprite(225, 450, "codey").setScale(0.5);
+
   const platforms = this.physics.add.staticGroup();
 
-  platforms.create(225, 490, 'platform').setScale(1, .3).refreshBody();
-
-  gameState.scoreText = this.add.text(195, 485, 'Score: 0', { fontSize: '15px', fill: '#000000' });
+  platforms.create(225, 510, "platform");
 
   gameState.player.setCollideWorldBounds(true);
 
   this.physics.add.collider(gameState.player, platforms);
-  
-	gameState.cursors = this.input.keyboard.createCursorKeys();
-    
-		// Add your code below:
-    this.input.on('pointerup', () =>{
-      gameState.score = 0;
-    	this.scene.restart();
-    });
-  });
+
+  // Create your cursor object below:
+  gameState.cursors = this.input.keyboard.createCursorKeys();
 }
 
 function update() {
+  // Add your conditional statements below:
   if (gameState.cursors.left.isDown) {
     gameState.player.setVelocityX(-160);
-  } else if (gameState.cursors.right.isDown) {
-    gameState.player.setVelocityX(160);
-  } else {
-    gameState.player.setVelocityX(0);
+  } else if (gameState.cursors.right.isDown){
+    gameState.player.setVelocityX(160)
+  } else{
+    gameState.player.setVelocityX(0)
   }
 }
 
@@ -62,17 +71,17 @@ const config = {
   height: 500,
   backgroundColor: "b9eaff",
   physics: {
-    default: 'arcade',
+    default: "arcade",
     arcade: {
       gravity: { y: 200 },
       enableBody: true,
-    }
+    },
   },
   scene: {
     preload,
     create,
-    update
-  }
+    update,
+  },
 };
 
 const game = new Phaser.Game(config);
