--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ function update() {
 
 const config = {
   type: Phaser.AUTO,
-  width: 450,
-  height: 500,
+  width: window.innerWidth,
+  height: window.innerHeight,
   backgroundColor: "b9eaff",
   physics: {
     default: "arcade",
