--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ function create() {
 
   platforms.create(225, 510, "platform");
 
-  gameState.player.setCollideWorldBounds(true);
+  //gameState.player.setCollideWorldBounds(true);
 
   this.physics.add.collider(gameState.player, platforms);
 
