--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ function create() {
 
   const platforms = this.physics.add.staticGroup();
 
-  platforms.create(window.innerWidth, window.innerHeight, "platform");
+  platforms.create(window.innerWidth / 2, window.innerHeight / 2, "platform");
 
   //gameState.player.setCollideWorldBounds(true);
 
