--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@ function update() {
 	
   if (gameState.cursors.up.isDown) {
     gameState.player.setVelocityY(-200);
-  } else{
-    gameState.player.setVelocityY(0)
-  }
+  } //else{
+   // gameState.player.setVelocityY(0)
+  //}
 }
 
 const config = {
