--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@ function create() {
   const platforms = this.physics.add.staticGroup();
 
   platforms.create(window.innerWidth / 2, window.innerHeight - window.innerHeight / 7, "platform");
-
-  //gameState.player.setCollideWorldBounds(true);
+//important thing
+  gameState.player.setCollideWorldBounds(true);
 
   this.physics.add.collider(gameState.player, platforms);
 
