--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    function preload() {
   this.load.image(
     "platform",
-    "https://i.ibb.co/m5g4hbL/planet.png"
+    src="planet.png"
   );
   this.load.image(
     "codey",
