--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	    function preload() {
   this.load.image(
     "platform",
-    src="planet.png"
+    src="images/planet.png"
   );
   this.load.image(
     "codey",
