--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ const config = {
   type: Phaser.AUTO,
   width: window.innerWidth,
   height: window.innerHeight,
-  backgroundColor: "b9eaff",
+  backgroundColor: "rgb(50, 50, 50)",
   physics: {
     default: "arcade",
     arcade: {
