--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@ function create() {
 
 function update() {
   // Add your conditional statements below:
-  if (gameState.cursors.left.isDown) {
+  if (gameState.cursors.left.isDown || gameState.cursors.A.isDown) {
     gameState.player.setVelocityX(-400);
-  } else if (gameState.cursors.right.isDown){
+  } else if (gameState.cursors.right.isDown || gameState.cursors.D.isDown){
     gameState.player.setVelocityX(400)
   } else{
     gameState.player.setVelocityX(0)
