--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
 
     <script>
-	    let fuel
+	    let fuel = 100
 	    function preload() {
   this.load.image(
     "platform",
@@ -61,7 +61,9 @@ function update() {
 	
 	
   if (gameState.cursors.up.isDown || gameState.wasd.up.isDown) {
-    gameState.player.setVelocityY(-550);
+	  if(fuel > 0){
+		   gameState.player.setVelocityY(-550);
+	  }
   } //else{
    // gameState.player.setVelocityY(0)
   //}
