--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ const gameState = {
 function create() {
   gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
 //score
-  gameState.scoreText = this.add.text(195, 485, 'Score: 0', { fontSize: '15px', fill: '#000000' });
+  gameState.scoreText = this.add.text(195, 485, 'Score: 0', { fontSize: '15px', fill: 'rgb(50, 50, 50)' });
 	
   const platforms = this.physics.add.staticGroup();
 
