--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@ function update() {
   //fuel += 1
   if(fuel > 200){
 	  fuel = 200
-  } elif(fuel < 0){
+  } else if(fuel < 0){
 	  fuelCharge = 0
   }
 	
