--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@ function update() {
   gameState.graphics.fillRect(10, 10, 200, 20);
 	
 // Calculate the width of the "full" part of the health bar
-  const healthPercentage = gameState.health / gameState.maxHealth;
+  //const healthPercentage = gameState.health / gameState.maxHealth;
+  const healthPercentage = fuel / gameState.maxHealth;
   const healthBarWidth = healthPercentage * 200;
 	
  // Draw the "full" part of the health bar
