--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ function create() {
 	
   gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
 //score
-  gameState.scoreText = this.add.text(window.innerWidth / 40, window.innerHeight / 40, 'Fuel: 0', { fontSize: '5em', fill: 'rgb(50, 50, 50)' });
+  //gameState.scoreText = this.add.text(window.innerWidth / 40, window.innerHeight / 40, 'Fuel: 0', { fontSize: '5em', fill: 'rgb(50, 50, 50)' });
 	
   const platforms = this.physics.add.staticGroup();
 
@@ -101,8 +101,8 @@ function update() {
     gameState.player.setVelocityX(0)
   }
 //score
-  gameState.score = fuelCharge
-  gameState.scoreText.setText(`Fuel: ${gameState.score}`)
+  //gameState.score = fuelCharge
+  //gameState.scoreText.setText(`Fuel: ${gameState.score}`)
 	
   if (gameState.cursors.up.isDown || gameState.wasd.up.isDown) {
 	  if(fuel > 0 && fuelCharge === 100){
