--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function update() {
   gameState.graphics.clear();
 	
 // Draw the background for the health bar
-  gameState.graphics.fillStyle(0x000000, 1);
+  gameState.graphics.fillStyle("rgb(50, 50, 50)", 1);
   gameState.graphics.fillRect(10, 10, 200, 20);
 	
 // Calculate the width of the "full" part of the health bar
