--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@ function update() {
   const healthBarWidth = healthPercentage * 200;
 	
  // Draw the "full" part of the health bar
-  gameState.graphics.fillStyle(0xff0000, 1);
+  gameState.graphics.fillStyle(5656E1, 1);
   gameState.graphics.fillRect(10, 10, healthBarWidth, 20);
 //HEALTH BAR
 	
