--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ const config = {
   type: Phaser.AUTO,
   width: window.innerWidth,
   height: window.innerHeight,
-  backgroundColor: "rgb(0, 0, 0)",
+  //backgroundColor: "rgb(0, 0, 0)",
   physics: {
     default: "arcade",
     arcade: {
