--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	    let fuelCharge = 100
 	    function preload() {
 //BG
-  game.load.image('background', 'images/output-onlineimagetools (1).png');
+  //game.load.image('background', 'images/output-onlineimagetools (1).png');
 //BG
   this.load.image(
     "platform",
@@ -40,7 +40,7 @@ const gameState = {
 
 function create() {
 //BG
-   var background = game.add.tileSprite(0, 0, 800, 600, 'background');
+   //var background = game.add.tileSprite(0, 0, 800, 600, 'background');
 //BG
 	
 //HEALTH BAR
@@ -125,7 +125,7 @@ const config = {
   type: Phaser.AUTO,
   width: window.innerWidth,
   height: window.innerHeight,
-  //backgroundColor: "rgb(0, 0, 0)",
+  backgroundColor: "rgb(0, 0, 0)",
   physics: {
     default: "arcade",
     arcade: {
