--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 //BG
   //game.load.image('background', 'images/output-onlineimagetools (1).png');
 //BG
-  this.load.image('bg', 'output-onlineimagetools (1).png
+  this.load.image('bg', 'images/output-onlineimagetools (1).png
 ');
   this.load.image(
     "platform",
