--- a/index.html
+++ b/index.html
@@ -20,8 +20,10 @@
 //BG
   //game.load.image('background', 'images/output-onlineimagetools (1).png');
 //BG
-  this.load.image('bg', 'images/output-onlineimagetools (1).png
-');
+  this.load.image(
+    'bg', 
+    src='images/output-onlineimagetools (1).png'
+  );
   this.load.image(
     "platform",
     src="images/planet (1).png"
