--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ function create() {
 //BG
    //var background = game.add.tileSprite(0, 0, 800, 600, 'background');
 //BG
-  this.add.image(window.innerWidth, window.innerHeight, 'bg');
+  this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
 	
 //HEALTH BAR
   gameState.graphics = this.add.graphics();
