--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Platformer</title>
-    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/G7w6XDP/grass2.png">
+    <link rel="icon" type="image/x-icon" href="https://i.ibb.co/kKzm07w/Mushroom-Potion3.png">
     <style>
      html, body {
       margin: 0;
