--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@ function create() {
 //BG
    //var background = game.add.tileSprite(0, 0, 800, 600, 'background');
 //BG
-  this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
+  //this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
+  var bg = game.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
+  bg.width = 200;
+  bg.height = 100;
 	
 //HEALTH BAR
   gameState.graphics = this.add.graphics();
