--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ function create() {
    //var background = game.add.tileSprite(0, 0, 800, 600, 'background');
 //BG
   //this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
-  var bg = game.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
+  var bg = game.add.image(0, 0, 'bg');
   bg.width = 200;
   bg.height = 100;
 	
