--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ function create() {
 //BG
   //this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
   var bg = this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
-  bg.width = 200;
+  bg.width = window.innerWidth;
   bg.height = 100;
 	
 //HEALTH BAR
