--- a/index.html
+++ b/index.html
@@ -48,8 +48,7 @@ function create() {
 //BG
   //this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
   var bg = this.add.image(window.innerWidth / 2, window.innerHeight / 2, 'bg');
-  bg.width = window.innerWidth;
-  bg.height = 100;
+  bg.scale.setTo(2, 2);
 	
 //HEALTH BAR
   gameState.graphics = this.add.graphics();
