--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 //BG
   this.load.image(
     'bg', 
-    src='images/output-onlineimagetools (1).png'
+    src='images/output-onlineimagetools_1-bell.png'
   );
   this.load.image(
     "platform",
