--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 //BG
   this.load.image(
     'bg', 
-    src='images/output-onlineimagetools_1-bell.png'
+    src='images/Screen Shot 2023-01-07 at 6.27.22 PM.png'
   );
   this.load.image(
     "platform",
