--- a/index.html
+++ b/index.html
@@ -98,6 +98,8 @@ function update() {
 	  fuel = 200
   } else if(fuel < 1){
 	  fuelCharge = 0
+  } else{
+	  fuel += 1
   }
 	
   if(fuelCharge < 100){
