--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@ function create() {
 }
   //IHJIUHGVGHUIUHGHUIHBV
   var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
-  anim.play();
+  //anim.play();
 
 function update() {
 //HEALTH BAR
