--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@ function create() {
 });
 }
   //IHJIUHGVGHUIUHGHUIHBV
-  var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
+  //var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
   //anim.play();
 
 function update() {
