--- a/index.html
+++ b/index.html
@@ -78,11 +78,13 @@ function create() {
   left: 'A',
   right: 'D'
 });
-}
   //IHJIUHGVGHUIUHGHUIHBV
-  //var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
-  //anim.play();
+  var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
+  anim.play();
 
+}
+	    
+	    
 function update() {
 //HEALTH BAR
   gameState.graphics.clear();
