--- a/index.html
+++ b/index.html
@@ -79,9 +79,9 @@ function create() {
   right: 'D'
 });
   //IHJIUHGVGHUIUHGHUIHBV
-  gameState.player.animations = this.animations;
-  var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
-  anim.play();
+  //gameState.player.animations = this.animations;
+  //var anim = gameState.player.animations.add('anim', ['codey', 'codeyup'], 1, true);
+  //anim.play();
 
 }
 	    
