--- a/index.html
+++ b/index.html
@@ -66,8 +66,9 @@ function create() {
   //gameState.scoreText = this.add.text(window.innerWidth / 40, window.innerHeight / 40, 'Fuel: 0', { fontSize: '5em', fill: 'rgb(50, 50, 50)' });
 	
   const platforms = this.physics.add.staticGroup();
-
-  platforms.create(window.innerWidth / 2, window.innerHeight - window.innerHeight / 5, "platform");
+  if(gameOn === 1){
+ 	 platforms.create(window.innerWidth / 2, window.innerHeight - window.innerHeight / 5, "platform");
+  }
 //important thing
   gameState.player.setCollideWorldBounds(true);
 
