--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
     "codeyup",
     src='images/Monster Hunter Squat Walk.png'
   )
+  this.load.image(
+    "start",
+    src='images/start button.png'
+  )	    
 }
 
 const gameState = {
