--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function create() {
   if(gameOn === 0){
   	gameState.startButton = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "start").setScale(0.65);
   }
-	
+  gameState.startButton.setInteractive()
   if(gameOn === 1){
   	gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
   }
