--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@ function create() {
   	gameState.startButton = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "start").setScale(0.65);
   }
   gameState.startButton.setInteractive()
+	
+  gameState.startButton.on('pointerup', function() {
+    gameOn = 1
+  });
+	
   if(gameOn === 1){
   	gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
   }
