--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@ function create() {
   }
   gameState.startButton.setInteractive()
 	
-  gameState.startButton.on('pointerup', function() {
-    gameOn = 1
-    this.scene.restart()
-  });
+  //gameState.startButton.on('pointerup', function() {
+    //gameOn = 1
+    //this.scene.restart()
+  //});
 	
   if(gameOn === 1){
   	gameState.player = this.physics.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "codey").setScale(0.5);
