--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ function create() {
   if(gameOn === 0){
   	gameState.startButton = this.add.sprite(window.innerWidth / 2, window.innerHeight / 2, "start").setScale(0.65);
   }
-  gameState.startButton.setInteractive()
+  //gameState.startButton.setInteractive()
 	
   //gameState.startButton.on('pointerup', function() {
     //gameOn = 1
