--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ function create() {
   }
   //gameState.standing = this.physics.sprite(gameState.player.X, gameState.player.y, "codeyup").setScale(0.5);
 //score
-  //gameState.scoreText = this.add.text(window.innerWidth / 40, window.innerHeight / 40, 'Fuel: 0', { fontSize: '5em', fill: 'rgb(50, 50, 50)' });
+  gameState.scoreText = this.add.text(window.innerWidth / 40, window.innerHeight / 40, 'Fuel: 0', { fontSize: '5em', fill: 'rgb(50, 50, 50)' });
 	
   const platforms = this.physics.add.staticGroup();
   if(gameOn === 1){
@@ -146,8 +146,8 @@ function update() {
     gameState.player.setVelocityX(0)
   }
 //score
-  //gameState.score = fuelCharge
-  //gameState.scoreText.setText(`Fuel: ${gameState.score}`)
+  gameState.score = gameOn
+  gameState.scoreText.setText(`Fuel: ${gameState.score}`)
 	
   if (gameState.cursors.up.isDown || gameState.wasd.up.isDown) {
 	  if(fuel > 0 && fuelCharge === 100){
