--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function create() {
   
   	gameState.startButton.setInteractive()
 	
- 	gameState.startButton.on('pointerup', function() {
+ 	gameState.startButton.on('pointerup', function(pointer) {
    		gameOn = 1
    		this.scene.restart()
 	});
