--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ function create() {
   
   	gameState.startButton.setInteractive()
 	
- 	gameState.startButton.on('pointerdown', function(pointer) {
+ 	gameState.startButton.on('pointerdown', function() {
    		gameOn = 1
    		//this.scene.restart()
 	});
