--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ function create() {
   	gameState.startButton.setInteractive()
 	
  	gameState.startButton.on('pointerdown', function() {
-   		gameOn = 1
+   		gameState.gameOn = 1
    		//this.scene.restart()
 	});
   }
