--- a/index.html
+++ b/index.html
@@ -38,10 +38,7 @@
     "codeyup",
     src='images/Monster Hunter Squat Walk.png'
   )
-  this.load.image(
-    "start",
-    src='images/start button.png'
-  )	    
+  this.load.image("start", "images/start button.png");
 }
 
 const gameState = {
