--- a/index.html
+++ b/index.html
@@ -137,12 +137,14 @@ function update() {
   }
 	
   // Add your conditional statements below:
-  if (gameState.cursors.left.isDown || gameState.wasd.left.isDown) {
-    gameState.player.setVelocityX(-400);
-  } else if (gameState.cursors.right.isDown || gameState.wasd.right.isDown){
-    gameState.player.setVelocityX(400)
-  } else{
-    gameState.player.setVelocityX(0)
+  if(gameOn === 1){
+  	if (gameState.cursors.left.isDown || gameState.wasd.left.isDown) {
+    		gameState.player.setVelocityX(-400);
+  	} else if (gameState.cursors.right.isDown || gameState.wasd.right.isDown){
+   		gameState.player.setVelocityX(400)
+  	} else{
+    		gameState.player.setVelocityX(0)
+  	}
   }
 //score
   gameState.score = gameOn
