--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@ function create() {
 	
  	gameState.startButton.on('pointerdown', function() {
 		console.log('works')
-   		//gameState.gameOn = 1
-   		//this.scene.restart()
+   		gameState.gameOn = 1
+   		this.scene.restart()
 	});
   }
   if(gameOn === 1){
