--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ const config = {
     create: create,
     update,
     gameScene: {
-      create: gameStart
+      create: create
     }
   },
 };
