--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@ function create() {
 		console.log('1')
    		gameState.gameOn = 1
 		console.log('2')
+		//NOT DEFINED  V
    		this.scene.start('gameScene');
 		console.log('3')
 	});
