--- a/index.html
+++ b/index.html
@@ -69,7 +69,8 @@ function create() {
    		gameState.gameOn = 1
 		console.log('2')
 		//NOT DEFINED  V
-   		this.scene.start('gameScene');
+   		//this.scene.start('gameScene');
+		this.scene.restart()
 		console.log('3')
 	});
   }
