--- a/index.html
+++ b/index.html
@@ -166,8 +166,8 @@ function update() {
   }
 	
   //Not currently in use
-  gameState.score = gameOn
-  gameState.scoreText.setText(`Fuel: ${gameState.score}`)
+  //gameState.score = gameOn
+  //gameState.scoreText.setText(`Fuel: ${gameState.score}`)
 	
   //Makes sure the fuel works more
   if (gameState.cursors.up.isDown || gameState.wasd.up.isDown) {
