--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
 	    let fuel = 200
 	    let fuelCharge = 100
 	    
-	    //Used to determine whether the game is on the planet or start screen
+	    //Used to determine whether the game is on the planet or title screen
+	    //Switch between 0 and 1 to go to title screen and planet
 	    let gameOn = 1
 	    
 	    //The preload
