--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@ function create() {
 		console.log('2')
 		
 		//Console says the restart is not defined
-		this.scene.restart(this)
+		scene.restart.this()
 		console.log('3')
 	});
   }
