--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ function update() {
   }
   
   //Checks if you fall off the cliff
-  //if(window.innerHeight < gameState.player.X){
+  if(window.innerHeight < gameState.player.x){
 	  
-  //}
+  }
 	
   //Not currently in use
   //gameState.score = gameOn
