--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function update() {
   }
   
   //Checks if you fall off the cliff
-  if(window.innerHeight < gameState.player.x){
+  if(window.innerHeight < player.x){
 	  
   }
 	
