--- a/index.html
+++ b/index.html
@@ -161,8 +161,8 @@ function update() {
   }
   
   //Checks if you fall off the cliff
-  if(window.innerHeight < player.x){
-	  
+  if(window.innerHeight < gameState.player.x){
+  	console.log('Death')
   }
 	
   //Not currently in use
