--- a/index.html
+++ b/index.html
@@ -161,7 +161,10 @@ function update() {
   }
   
   	//Checks if you fall off the cliff
-  	if(window.innerHeight < gameState.player.y){
+  	//if(window.innerHeight < gameState.player.y){
+  		//console.log('Death')
+  	//}
+	if(window.innerHeight < window.innerWidth){
   		console.log('Death')
   	}
 	
