--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ function update() {
   	//if(window.innerHeight < gameState.player.y){
   		//console.log('Death')
   	//}
-	if(window.innerHeight < window.innerWidth && gameOn === 1){
+	if(window.innerHeight < gameState.player.y && gameOn === 1){
   		console.log('Death')
   	}
 	
