--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ function update() {
   }
   
   	//Checks if you fall off the cliff
-	if(window.innerHeight < gameState.player.y && gameOn === 1){
+	if(window.innerHeight < player.y && gameOn === 1){
   		console.log('Death')
   	}
 	
