--- a/index.html
+++ b/index.html
@@ -161,9 +161,9 @@ function update() {
   }
   
   	//Checks if you fall off the cliff
-	if(window.innerHeight < player.y && gameOn === 1){
+	/*if(window.innerHeight < gameState.player.y && gameOn === 1){
   		console.log('Death')
-  	}
+  	}*/
 	
   //Not currently in use
   //gameState.score = gameOn
